src/parser/snapshots/dinky_c__parser__parser__tests__parse_many_additions.snap
---
source: src/parser/parser.rs
expression: ast
---
FN (id: main)
	returns: int
	params: ()
	body:
		RETURN ((1 + 2) + 3)
