src/parser/snapshots/dinky_c__parser__parser__tests__parse_negation.snap
---
source: src/parser/parser.rs
expression: ast
---
FN (id: main)
	returns: int
	params: ()
	body:
		RETURN (- 1)
