src/parser/snapshots/dinky_c__parser__parser__tests__parse_simple_main.snap
---
source: src/parser/parser.rs
expression: ast
---
FN (id: main)
	returns: int
	params: ()
	body:
		RETURN 0
