src/parser/snapshots/dinky_c__parser__parser__tests__parse_simple_main_error_0.snap
---
source: src/parser/parser.rs
expression: parse(tokens)
---
Err(
    "Expected CloseBrace, found None.",
)
