src/parser/snapshots/dinky_c__parser__parser__tests__parse_simple_main_error_1.snap
---
source: src/parser/parser.rs
expression: parse(tokens)
---
Err(
    "Expected RETURN, found Some(Integer(1)).",
)
